# xmemory-temporal

./: .gitignore  LICENSE  NOTICE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/temporal/: xmemory.md
examples/: agent_workflow.py  run_workflow.py  setup_memory.py  worker.py
src/xmemory_temporal/: __init__.py  activities.py  client_factory.py  config.py  dto.py  errors.py  interceptor.py  plugin.py  protocol.py  workflow_api.py
tests/: conftest.py  fakes.py  test_activities.py  test_config.py  test_e2e_live.py  test_error_mapping.py  test_facade_parity.py  test_interceptor.py  test_replay_side_effects.py  test_replayer.py  test_workflow_read_write.py  test_write_async_polling.py  workflows.py
